--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
     <artifactId>spring-boot-learning</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-````
     <name>spring-boot-learning</name>
     <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.jackson>2.9.0</version.jackson>
+        <java.version>1.8</java.version>
     </properties>
 
 
@@ -29,6 +29,11 @@
             <artifactId>junit</artifactId>
             <version>4.10</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId></groupId>
+            <artifactId>javassist</artifactId>
         </dependency>
         <!--<dependency>-->
         <!--<groupId>org.springframework.boot</groupId>-->
